Fixed game overlay not covering whole height

--- a/css/game.css
+++ b/css/game.css
@@ -8,6 +8,7 @@
 
 .game #overlay {
     background: var(--glass-color-dark);
+    height: 100%;
 }
 
 .game #content {
